src/objects/Case_Template__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Account Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependency__c</fullName>
        <label>Dependency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dup_Checker__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used to ensure that a case is not duplicated ie two cases with the same parent and the same code</description>
        <label>Dup Checker</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>Unique identifier for data migration</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Case_Template_Group__c</referenceTo>
        <relationshipLabel>Case Templates</relationshipLabel>
        <relationshipName>Case_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organisation_Size__c</fullName>
        <description>The size of the organization used in SAL calc</description>
        <label>Organisation Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA1__c</fullName>
        <label>SLA1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA2__c</fullName>
        <label>SLA2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Case Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Group__c</columns>
        <columns>Code__c</columns>
        <columns>Dependency__c</columns>
        <columns>Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Fixed_SLA__c</columns>
        <columns>SLA1__c</columns>
        <columns>SLA2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Template</pluralLabel>
    <recordTypes>
        <fullName>Child</fullName>
        <active>true</active>
        <label>Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <label>Parent</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fixed_SLA_Days</fullName>
        <active>true</active>
        <description>To prevent non fixed sla&apos;s from not having the required criteria to calculate the SLAs</description>
        <errorConditionFormula>IF(
AND(
Fixed_SLA__c = false,
Code__c &gt; 0,
OR(
ISNULL(SLA2__c),
ISNULL(Organisation_Size__c)
)),true,false)</errorConditionFormula>
        <errorMessage>If the SLA days are not fixed, the SLA Days 2 field &amp; the Organisation Size fields are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Case_Code</fullName>
        <active>true</active>
        <description>Ensure that all parent cases have code 0</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;Parent&apos;, Code__c &gt; 0 )</errorConditionFormula>
        <errorMessage>A Parent Case must have a code of 0.</errorMessage>
    </validationRules>
</CustomObject>